# ccpy

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  build_release.sh  build_run_debug.bat  build_run_release.bat  build_run_release.sh  clean.sh  count.sh  grammar.abnf  grammar.bnf  grammar.cur.abnf  grammar.full.abnf  grammar.tiny.abnf  shell.nix
src/: ccpy.cc  test.cc  test_runner.cc
src/ast/: token.cc  token.h
src/parse/: tokenizer.cc
src/serialize/: serializer.h  structual.h
src/util/: stream.h  util.h
std/: __builtins__.py
tests/00serialize/: ast.out  number.out
tests/01tokenizer/: 01tokenizer.cc  basic.in  basic.out  begin_ident.out  begin_newline.out  eof_no_newline.out  indent0.in  indent0.out  indent1.in  indent1.out  unknow_char.out
tests/02parser/: 02parser.cc  args1.out  args2.in  args2.out  args3.in  basic.in  basic.out  class.in  class.out  loop1.in  loop1.out  loop2.in  loop2.out  missing_operend2.out  missing_operend3.out  relation.in  relation.out  try.in  try.out
tests/03early_fold/: 03early_fold.cc  basic.in  basic.out  binary_err1.out  binary_err2.out
tests/04hir_gen/: 04hir_gen.cc  assign.out  basic1.in  basic1.out  class.in  class.out  closure1.in  closure2.in  closure3.in  closure4.in  closure4.out  closure5.in  closure5.out  closure6.in  closure6.out  generator.in  generator.out  loop.in  loop.out  relation.in  relation.out  try.in  try.out
tests/05runtime/: 05runtime.cc  basic1.in  basic2.in  empty1.out  prog1.in  prog1.out  prog2.in  prog2.out
tests/06std/: 06std.cc  closure.in  closure.out  (+10 more)
(+99 files in other folders)
